--- a/app/webroot/css/projects/single_project.less
+++ b/app/webroot/css/projects/single_project.less
@@ -264,7 +264,8 @@ a.view-colc{
 		margin:auto;
 	}
 	.intro h1{
-		text-align: center;
+		max-width:1200px;
+		margin:auto;
 	}
 	ul.recent-resource{
 		width:1300px;
