--- a/app/webroot/css/ui/footer.less
+++ b/app/webroot/css/ui/footer.less
@@ -87,4 +87,16 @@
 }
 
 
-
+@media screen and (max-width:400px){
+    div.footer{
+        padding-top:50px;
+        padding-bottom:50px;
+        .footer-note {
+            visibility: hidden;
+        }
+        img.cal {
+            max-width:250px;
+            margin-top:40px;
+        }
+    }
+}
